--- a/README.Rmd
+++ b/README.Rmd
@@ -9,7 +9,7 @@ knitr::opts_chunk$set(echo = TRUE)
 
 ## Purpose
 
-This repository contains the resources I employed during the presentation of two lectures titled _Introduction to R_ to Masters Economics students at the University of Stellenbosch. The aim of the lectures was to offer a cursory introduction to R, RStudio, and GitHub to enable students to perform basic operations in a brief amount of time. Students were also tasked to complete a short assignment, the repository of which is stored [here](https://github.com/WihanZA/R_Assignment_Memo_2022).
+This repository contains the resources I employed during the presentation of two lectures titled _Introduction to R_ to Masters Economics students at the University of Stellenbosch. The aim of the lectures was to offer a cursory introduction to R, RStudio, and GitHub to enable students to perform basic operations in a brief amount of time. Students were also tasked to complete a short assignment.
 
 ## Acknowledgements
 
@@ -18,3 +18,9 @@ I used the lecture notes template from `grantmcdermott/lecturenotes` and compile
 * [R intro](https://raw.githack.com/grantmcdermott/R-intro/master/rIntro.html) (2018) by Grant R. McDermott and Ed Rubin.
 * [Data Science for Economics and Finance: Getting you staRted](https://datsci.nfkatzke.com/posts/2019-07-24-practical-1-getting-you-started/) (2021) by N.F. Katzke.
 * [Stata2R](https://stata2r.github.io/)
+
+## Map
+
+* Lecture notes in [`.Rmd`](https://github.com/WihanZA/Intro_to_R/blob/master/Lecture_notes/Lecture_notes.Rmd) and [`.pdf`](https://github.com/WihanZA/Intro_to_R/blob/master/Lecture_notes/Lecture_notes.pdf)
+* [Data](https://github.com/WihanZA/Intro_to_R/tree/master/Lecture_notes/data)
+* [Assignment](https://github.com/WihanZA/R_Assignment_Memo_2022)
